# wasi-crypto

./: .gitignore  Cargo.toml  Charter.md  Contributing.md  README.md
design/: security.md
docs/: HighLevelGoals.md  wasi-crypto.md
examples/assemblyscript/assembly/: asymmetric_common.ts  common.ts  crypto.ts  symmetric.ts
examples/rust/: Cargo.toml
implementations/bindings/rust/: Cargo.toml  rust-toolchain.toml
implementations/bindings/rust/src/: error.rs  lib.rs  main.rs  raw.rs  test.rs
implementations/bindings/rust/src/asymmetric_common/: keypair.rs  mod.rs  publickey.rs  secretkey.rs
implementations/bindings/rust/src/common/: options.rs
implementations/bindings/rust/src/kx/low/: key_pair.rs  mod.rs  public_key.rs  secret_key.rs
implementations/bindings/rust/src/signatures/low/: key_pair.rs  mod.rs  public_key.rs  state.rs
implementations/bindings/rust/src/symmetric/: mod.rs
implementations/bindings/rust/src/symmetric/high/: auth.rs  hash.rs  hkdf.rs
implementations/bindings/rust/src/symmetric/low/: mod.rs  state.rs
implementations/bindings/rust/src/symmetric/rust_crypto/: mod.rs
implementations/bindings/rust/tests/: hash.rs  test_symmetric.rs
implementations/hostcalls/rust/: Cargo.toml
implementations/hostcalls/rust/src/: array_output.rs  error.rs  handles.rs  lib.rs  rand.rs  version.rs
implementations/hostcalls/rust/src/asymmetric_common/: keypair.rs  mod.rs  publickey.rs  secretkey.rs
implementations/hostcalls/rust/src/key_exchange/: keypair.rs  mod.rs  publickey.rs  secretkey.rs
implementations/hostcalls/rust/src/key_exchange/dh/: mod.rs  x25519.rs
implementations/hostcalls/rust/src/key_exchange/kem/: kyber.rs  mod.rs
implementations/hostcalls/rust/src/signatures/: ecdsa.rs  eddsa.rs  keypair.rs  mod.rs  publickey.rs  rsa.rs  rsa_rcrypto.rs  secretkey.rs  signature.rs
implementations/hostcalls/rust/src/symmetric/: aes_gcm.rs  chacha_poly.rs  hkdf.rs  hmac_sha2.rs  key.rs  mod.rs  sha2.rs  state.rs  tag.rs  xoodyak.rs
implementations/hostcalls/rust/src/wiggle_interfaces/: asymmetric_common.rs  common.rs  error.rs  mod.rs  signatures.rs  symmetric.rs
implementations/wasmtime/: Cargo.toml
implementations/wasmtime/src/: lib.rs  wasi_glue.rs
implementations/wasmtime/src/symmetric/: xoodyak.rs
meetings/minutes/: 2022-09-22.md  2022-10-04.md  2022-11-01.md
proposals/ephemeral_crypto/: Cargo.toml
proposals/poc/: .gitignore  README.md
proposals/poc/implementation/: Cargo.toml
proposals/poc/implementation/src/: array_output.rs  ecdsa.rs  eddsa.rs  error.rs  handles.rs  key_manager.rs  lib.rs  options.rs  rsa.rs  secrets_manager.rs  signature.rs  signature_keypair.rs  signature_op.rs  signature_publickey.rs  wasi_glue.rs
proposals/poc/implementation/src/asymmetric_common/: keypair.rs  managed_keypair.rs  mod.rs  publickey.rs  secretkey.rs  wasi_glue.rs
proposals/poc/implementation/src/key_exchange/: keypair.rs  mod.rs  publickey.rs  secretkey.rs  wasi_glue.rs  x25519.rs
proposals/poc/implementation/src/key_exchange/dh/: x25519.rs
proposals/poc/implementation/src/key_exchange/kem/: mod.rs
proposals/poc/implementation/src/signatures/: ecdsa.rs  eddsa.rs  keypair.rs  keypair_manager.rs  mod.rs  publickey.rs  rsa.rs  secretkey.rs  signature.rs  wasi_glue.rs
proposals/poc/implementation/src/symmetric/: aes_gcm.rs  hkdf.rs  hmac_sha2.rs  key.rs  key_manager.rs  managed_key.rs  mod.rs  sha2.rs  state.rs  tag.rs  wasi_glue.rs  xoodyak.rs
proposals/witx/: build.rs  docs.md  typenames.witx  wasi_ephemeral_crypto.witx
wit/: README.md  wasi_ephemeral_crypto_asymmetric_common.wit  wasi_ephemeral_crypto_common.wit  wasi_ephemeral_crypto_external_secrets.wit  wasi_ephemeral_crypto_kx.wit  wasi_ephemeral_crypto_signatures.wit  wasi_ephemeral_crypto_signatures_batch.wit  wasi_ephemeral_crypto_symmetric.wit  wasi_ephemeral_crypto_symmetric_batch.wit  wasi_ephemeral_crypto_todo_types.wit  world.wit
wit/batch/: wasi_ephemeral_crypto_signatures_batch.wit  wasi_ephemeral_crypto_symmetric_batch.wit
witx/: Makefile  proposal_asymmetric_common.md  proposal_asymmetric_common.witx  proposal_common.md  proposal_common.witx  proposal_external_secrets.md  proposal_external_secrets.witx  proposal_kx.md  proposal_kx.witx  proposal_signatures.md  proposal_signatures.witx  proposal_symmetric.md  proposal_symmetric.witx  wasi_ephemeral_crypto.json  wasi_ephemeral_crypto.md  wasi_ephemeral_crypto.txt  wasi_ephemeral_crypto.witx  wasi_ephemeral_crypto_common.md  wasi_ephemeral_crypto_external_secrets.witx  wasi_ephemeral_crypto_kx.md  wasi_ephemeral_crypto_signatures.md  wasi_ephemeral_crypto_symmetric.witx
witx/codegen/: Makefile  wasi_ephemeral_crypto.md  wasi_ephemeral_crypto.txt  wasi_ephemeral_crypto_asymmetric_common.md  wasi_ephemeral_crypto_asymmetric_common.witx  wasi_ephemeral_crypto_common.md  wasi_ephemeral_crypto_common.witx  wasi_ephemeral_crypto_external_secrets.md  wasi_ephemeral_crypto_kx.md  wasi_ephemeral_crypto_kx.witx  wasi_ephemeral_crypto_signatures.md  wasi_ephemeral_crypto_signatures.witx  wasi_ephemeral_crypto_signatures_batch.witx  wasi_ephemeral_crypto_symmetric.md  wasi_ephemeral_crypto_symmetric.witx  wasi_ephemeral_crypto_symmetric_batch.md  wasi_ephemeral_crypto_symmetric_batch.witx
witx/witx-0.10/: wasi_ephemeral_crypto.md  wasi_ephemeral_crypto.txt  wasi_ephemeral_crypto_asymmetric_common.md  wasi_ephemeral_crypto_asymmetric_common.witx  wasi_ephemeral_crypto_common.md  wasi_ephemeral_crypto_common.witx  wasi_ephemeral_crypto_external_secrets.md  wasi_ephemeral_crypto_external_secrets.witx  wasi_ephemeral_crypto_kx.md  wasi_ephemeral_crypto_signatures.md  wasi_ephemeral_crypto_signatures.witx  wasi_ephemeral_crypto_signatures_batch.md  wasi_ephemeral_crypto_signatures_batch.witx  wasi_ephemeral_crypto_symmetric.md  wasi_ephemeral_crypto_symmetric.witx  wasi_ephemeral_crypto_symmetric_batch.md  wasi_ephemeral_crypto_symmetric_batch.witx
witx/witx-0.9/: proposal_asymmetric_common.witx  proposal_common.witx  proposal_external_secrets.witx  proposal_kx.witx  proposal_signatures.witx  proposal_symmetric.witx
(+28 files in other folders)
