[package]
name = "wasi-crypto"
version = "0.1.0"
authors = ["Daiki Ueno <dueno@redhat.com>"]
edition = "2018"
description = ""
homepage = "https://github.com/WebAssembly/WASI-crypto"
repository = "https://github.com/WebAssembly/WASI-crypto"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]

[build-dependencies]
witx = { git = "https://github.com/WebAssembly/WASI/" }
