cargo-features = ["per-package-target"]

[package]
name = "wasi-crypto-guest"
version = "0.1.1"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
publish = false
forced-target = "wasm32-wasi"

[dependencies]
num_enum = "0.5"
digest = { version = "0.10.3", optional = true }

[features]
default = ["rust-crypto"]
rust-crypto = ["digest"]