[package]
name = "wasi-crypto"
version = "0.1.5"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Experimental implementation of the WASI cryptography APIs"
documentation = "https://docs.rs/wasi-crypto"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "cryptography"]
keywords = ["webassembly", "wasm", "crypto"]
repository = "https://github.com/webassembly/wasi-crypto"

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0.58"
bincode = "1.3.3"
boring = "2.0.0"
byteorder = "1.4.3"
chacha20poly1305 = "0.9.1"
curve25519-dalek = "=3.2.0" # updating is impossible due to a dependency on an older `zeroize` version
derivative = "2.2.0"
ed25519-dalek = "1.0.1"
hkdf = "0.12.3"
hmac = "0.12.1"
k256 = { version = "0.11.3", features = [
    "ecdsa",
    "std",
    "pkcs8",
    "pem",
] }
p256 = { version = "0.11.1", features = [
    "ecdsa",
    "std",
    "pkcs8",
    "pem",
] }
p384 = { version = "0.11.1", features = [
    "ecdsa",
    "std",
    "pkcs8",
    "pem",
] }
pqcrypto = { version = "0.15.0", default-features = false, features = [
    "pqcrypto-kyber",
], optional = true }
rand_core = { version = "0.6.3", default-features = false, package = "rand_core" }
rand_core_05 = { package = "rand_core", version = "0.5", default-features = false }
serde = { version = "1.0.139", features = ["derive"] }
sha2 = "0.10.2"
subtle = "2.4.1"
thiserror = "1.0.31"
xoodyak = "0.7.3"
zeroize = "1.5.6"

[features]
default = ["pqcrypto"]

[badges]
maintenance = { status = "experimental" }
