[package]
name = "wasi-crypto"
version = "0.1.6"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Experimental implementation of the WASI cryptography APIs"
documentation = "https://docs.rs/wasi-crypto"
license-file = "LICENSE"
categories = ["wasm", "cryptography"]
keywords = ["webassembly", "wasm", "crypto"]
repository = "https://github.com/webassembly/wasi-crypto"

[dependencies]
aes-gcm = "0.10.1"
anyhow = "1.0.66"
bincode = "1.3.3"
boring = { version = "2.1.0", optional = true }
byteorder = "1.4.3"
chacha20poly1305 = "0.10.1"
derivative = "2.2.0"
ed25519-compact = { version = "2.0.2", features = ["x25519"] }
hkdf = "0.12.3"
hmac = "0.12.1"
k256 = { version = "0.11.6", features = ["ecdsa", "std", "pkcs8", "pem"] }
p256 = { version = "0.11.1", features = ["ecdsa", "std", "pkcs8", "pem"] }
p384 = { version = "0.11.2", features = ["ecdsa", "std", "pkcs8", "pem"] }
rsa = { version = "0.6.1", features = [
    "expose-internals",
    "serde",
    "std",
    "pem",
], optional = true }
pqcrypto-traits = { version = "0.3.4", optional = true }
pqcrypto-kyber = { version = "0.7.6", optional = true }

rand_core = { version = "0.6.4", features = [
    "getrandom",
], package = "rand_core" }
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
subtle = "2.4.1"
thiserror = "1.0.37"
xoodyak = "0.8.0"
zeroize = { version = "1.5.7", features = ["derive"] }

[features]
default = ["pqcrypto", "boring"]
pqcrypto = ["pqcrypto-traits", "pqcrypto-kyber"]
rcrypto = ["dep:rsa"]

[badges]
maintenance = { status = "experimental" }
