[package]
name = "wasi-crypto"
version = "0.1.9"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Experimental implementation of the WASI cryptography APIs"
documentation = "https://docs.rs/wasi-crypto"
license-file = "LICENSE"
categories = ["wasm", "cryptography"]
keywords = ["webassembly", "wasm", "crypto"]
repository = "https://github.com/webassembly/wasi-crypto"

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.72"
bincode = "1.3.3"
boring = { version = "2.1.0", optional = true }
byteorder = "1.4.3"
chacha20poly1305 = "0.10.1"
derivative = "2.2.0"
ed25519-compact = { version = "2.0.4", features = ["x25519"] }
hkdf = "0.12.3"
hmac = "0.12.1"
k256 = { version = "0.13.1", features = ["ecdsa", "std", "pkcs8", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std", "pkcs8", "pem"] }
p384 = { version = "0.13.0", features = ["ecdsa", "std", "pkcs8", "pem"] }
pqcrypto-traits = { version = "0.3.4", optional = true }
pqcrypto-kyber = { version = "0.7.6", optional = true }

rand_core = { version = "0.6.4", features = [
    "getrandom",
], package = "rand_core" }
serde = { version = "1.0.171", features = ["derive"] }
sha2 = "0.10.7"
subtle = "2.5.0"
thiserror = "1.0.43"
xoodyak = "0.8.4"
zeroize = { version = "1.6.0", features = ["derive"] }

[features]
default = ["pqcrypto", "boring"]
pqcrypto = ["pqcrypto-traits", "pqcrypto-kyber"]

[badges]
maintenance = { status = "experimental" }
