[package]
name = "wasi-crypto"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.4"
derivative = "2.1.1"
parking_lot = "0.10.2"
ring = "0.16.14"
thiserror = "1.0.19"
wiggle = "0.17.0"
xoodyak = "0.5.1"
zeroize = "1.1.0"
