[package]
name = "wasi-crypto"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
curve25519-dalek = "3"
derivative = "2.1"
parking_lot = "0.11"
pqcrypto = { version = "0.11", default-features = false, features = ["pqcrypto-kyber"] }
ring = "0.17.0-alpha"
thiserror = "1.0"
wiggle = "0.20"
xoodyak = "0.5"
zeroize = "1.1"
